<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Another Widget</string>
    <string name="add_widget">Add Widget</string>
    <string name="settings_general_title">Display</string>
    <string name="divider" translatable="false">|</string>
    <string name="settings_font_color_title">Text color</string>
    <string name="settings_secondary_font_color_title">Text color</string>
    <string name="settings_background_color_title">Background color</string>
    <string name="title_main_text_size">Text size</string>
    <string name="title_second_text_size">Text size</string>
    <string name="title_text_shadow">Text shadow</string>
    <string name="settings_text_shadow_subtitle_none">None</string>
    <string name="settings_text_shadow_subtitle_low">Low</string>
    <string name="settings_text_shadow_subtitle_high">High</string>
    <string name="settings_custom_font_title">Widget font</string>
    <string name="custom_font_subtitle_0">Device font</string>
    <string name="custom_font_subtitle_1">Google Sans</string>
    <string name="custom_date_format">Custom date format</string>
    <string name="alpha">Alpha</string>
    <string name="transparent">Transparent</string>
    <string name="settings_show_dividers_title">Text separators</string>
    <string name="first_row_header">Primary Text</string>
    <string name="second_row_header">Secondary Text</string>
    <string name="global_style_header">Widget</string>
    <string name="action_capitalize_the_date">Capitalize the date</string>
    <string name="settings_date_format_title">Date format</string>
    <string name="header_widget_background">Widget background</string>
    <string name="settings_secondary_row_top_margin_title">Rows spacing</string>
    <string name="action_custom_font_to_search">Custom font…</string>
    <string name="font_family_settings_title">Font family</string>
    <string name="settings_widget_align_title">Widget alignment</string>
    <string name="settings_widget_align_left_subtitle">Left</string>
    <string name="settings_widget_align_right_subtitle">Right</string>
    <string name="settings_widget_align_center_subtitle">Center</string>
    <string name="font_100" translatable="false">Thin</string>
    <string name="font_200" translatable="false">Light</string>
    <string name="font_300" translatable="false">Book</string>
    <string name="font_400" translatable="false">Regular</string>
    <string name="font_500" translatable="false">Medium</string>
    <string name="font_600" translatable="false">Semi-bold</string>
    <string name="font_700" translatable="false">Bold</string>
    <string name="font_800" translatable="false">Black</string>
    <string name="font_900" translatable="false">Heavy</string>
    <string name="font_italic" translatable="false">Italic</string>
    <string name="font_100_italic" translatable="false">Thin Italic</string>
    <string name="font_200_italic" translatable="false">Light Italic</string>
    <string name="font_300_italic" translatable="false">Book Italic</string>
    <string name="font_400_italic" translatable="false">Regular Italic</string>
    <string name="font_500_italic" translatable="false">Medium Italic</string>
    <string name="font_600_italic" translatable="false">Semi-bold Italic</string>
    <string name="font_700_italic" translatable="false">Bold Italic</string>
    <string name="font_800_italic" translatable="false">Black Italic</string>
    <string name="font_900_italic" translatable="false">Heavy Italic</string>
    <string name="settings_widget_padding_title">Widget padding</string>
    <string name="settings_widget_margin_title">Widget margin</string>
    <string name="settings_widget_dim_none">None</string>
    <string name="settings_widget_dim_small">Small</string>
    <string name="settings_widget_dim_medium">Medium</string>
    <string name="settings_widget_dim_large">Large</string>
    <string name="settings_calendar_title">Calendar</string>
    <string name="title_permission_calendar">Show your events</string>
    <string name="description_permission_calendar">Grant access to your calendar\nto view events in your widget.</string>
    <string name="settings_filter_calendar_title">Filter events</string>
    <string name="settings_filter_calendar_subtitle">Change calendar visibility</string>
    <string name="settings_all_day_title">All day events</string>
    <string name="main_calendar">Account calendar</string>
    <string name="calendar_settings_list_error">Error loading the calendar list.</string>
    <string name="all_day">All day event</string>
    <string name="show_events_visible">Events are visible</string>
    <string name="show_events_not_visible">Events are hidden</string>
    <string name="settings_show_until_subtitle_6">30 minutes later</string>
    <string name="settings_show_until_subtitle_7">1 hour later</string>
    <string name="settings_show_until_subtitle_0">3 hours later</string>
    <string name="settings_show_until_subtitle_1">6 hours later</string>
    <string name="settings_show_until_subtitle_2">12 hours later</string>
    <string name="settings_show_until_subtitle_3">24 hours later</string>
    <string name="settings_show_until_subtitle_4">3 days later</string>
    <string name="settings_show_until_subtitle_5">7 days later</string>
    <string name="settings_show_until_title">Show events at least</string>
    <string name="day_char">d</string>
    <string name="settings_calendar_app_title">Calendar</string>
    <string name="error_no_calendar">No calendars found.</string>
    <string name="tomorrow">tomorrow</string>
    <string name="today">today</string>
    <string name="settings_event_app_title">Tap on event opens</string>
    <string name="settings_second_row_info_title">Event info</string>
    <string name="settings_second_row_info_subtitle_1">Event address</string>
    <string name="settings_second_row_info_subtitle_0">Event time</string>
    <string name="settings_show_diff_time_title">Time until the event</string>
    <string name="settings_show_declined_events_title">Declined events</string>
    <string name="default_event_app">Event details</string>
    <string name="default_calendar_app">Default calendar app</string>
    <string name="settings_show_multiple_events_title">Multiple events switcher</string>
    <string name="soon">soon</string>
    <string name="now">now</string>
    <string name="settings_widget_update_frequency_title">Time until event update frequency</string>
    <string name="settings_widget_update_frequency_subtitle">High frequency causes more battery consumption.</string>
    <string name="settings_widget_update_frequency_low">Low</string>
    <string name="settings_widget_update_frequency_default">Default</string>
    <string name="settings_widget_update_frequency_high">High</string>
    <string name="filters_header">Filters</string>
    <string name="event_detail_header">Event detail</string>
    <string name="settings_attendee_status_title">Attendee status</string>
    <string name="settings_attendee_status_subtitle">Filter accepted or declined events</string>
    <string name="settings_busy_events_title">Relevant events</string>
    <string name="settings_busy_events_subtitle">Show only events that keep busy</string>
    <string name="attendee_status_accepted">Accepted events</string>
    <string name="attendee_status_invited">Events invitations</string>
    <string name="attendee_status_declined">Declined events</string>
    <string name="calendar_sync_notification_channel_id" translatable="false">calendar-sync</string>
    <string name="calendar_sync_notification_channel_name">Events sync service</string>
    <string name="calendar_sync_notification_channel_description">Service used to synchronize the calendar events.</string>
    <string name="calendar_sync_notification_title">Syncing calendar events…</string>
    <string name="settings_show_next_event_on_multiple_lines_title">Show title on multiple lines</string>
    <string name="settings_weather_title">Weather</string>
    <string name="title_permission_location">Show the weather</string>
    <string name="description_permission_location">Grant access to your location\nto view weather in your widget.</string>
    <string name="settings_unit_title">Unit of measure</string>
    <string name="fahrenheit" translatable="false">°F - Fahrenheit</string>
    <string name="celsius" translatable="false">°C - Celsius</string>
    <string name="settings_weather_refresh_period_title">Refresh frequency</string>
    <string name="settings_weather_refresh_period_subtitle_0">30 minutes</string>
    <string name="settings_weather_refresh_period_subtitle_1">1 hour</string>
    <string name="settings_weather_refresh_period_subtitle_2">3 hours</string>
    <string name="settings_weather_refresh_period_subtitle_3">6 hours</string>
    <string name="settings_weather_refresh_period_subtitle_4">12 hours</string>
    <string name="settings_weather_refresh_period_subtitle_5">24 hours</string>
    <string name="settings_custom_location_title">Location</string>
    <string name="custom_location_gps">Geolocation</string>
    <string name="show_weather_visible">Weather info is visible</string>
    <string name="show_weather_not_visible">Weather info is hidden</string>
    <string name="settings_weather_app_title">Weather</string>
    <string name="settings_weather_provider_api_key_title">Weather API key</string>
    <string name="settings_weather_provider_api_key_subtitle_all_set">The weather provider is configured correctly.</string>
    <string name="settings_weather_provider_api_key_subtitle_not_set">The weather provider must be configured.</string>
    <string name="api_key_hint">OpenWeatherMap API Key</string>
    <string name="default_weather_app">Google Weather</string>
    <string name="weather_warning">Google Awareness API is now deprecated. It is now required to have an API key from a third-party provider to show weather in the widget.</string>
    <string name="settings_weather_icon_pack_title">Icon pack</string>
    <string name="settings_weather_icon_pack_default">Icon pack %d</string>
    <string name="background_location_warning">When Geolocation is selected, we collect location data to update the weather information even when the app is closed or not in use.\nWe will not use these data otherwise.</string>
    <string name="settings_weather_provider_api">Weather provider</string>
    <string name="settings_weather_provider_open_weather" translatable="false">OpenWeatherMap.org</string>
    <string name="settings_weather_provider_weatherbit" translatable="false">Weatherbit.io</string>
    <string name="settings_weather_provider_weather_api" translatable="false">WeatherAPI.com</string>
    <string name="weather_provider_info_open_weather_title">This weather provider needs\nan API key to work correctly.</string>
    <string name="weather_provider_info_open_weather_subtitle">Open the provider website, create a personal account and copy the default key here.</string>
    <string name="settings_clock_title">Clock</string>
    <string name="settings_at_a_glance_title">At a glance</string>
    <string name="settings_sort_glance_providers_subtitle">Change the data provider priority by sorting the list below with the drag-and-drop icons.</string>
    <string name="providers">Providers</string>
    <string name="glance_info">Glance info will show up only when there are no events displayed and only when a few conditions are verified.</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate app</string>
    <string name="action_support">Support me</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_refresh_widget">Refresh widget</string>
    <string name="action_save">Save</string>
    <string name="action_grant_permission">Grant permission</string>
</resources>