<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/settings_nav_graph"
    app:startDestination="@id/tabSelectorFragment">

    <fragment
        android:id="@+id/calendarTabFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.CalendarFragment"
        android:label="@string/settings_calendar_title" />
    <fragment
        android:id="@+id/clockTabFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.ClockFragment"
        android:label="@string/settings_clock_title" />
    <fragment
        android:id="@+id/glanceTabFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.GlanceTabFragment"
        android:label="@string/settings_at_a_glance_title" />
    <fragment
        android:id="@+id/generalTabFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.LayoutFragment"
        android:label="GeneralTabFragment" />
    <fragment
        android:id="@+id/weatherTabFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.WeatherFragment"
        android:label="@string/settings_weather_title" />
    <fragment
        android:id="@+id/tabSelectorFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.PreferencesFragment"
        android:label="TabSelectorFragment" >
        <action
            android:id="@+id/action_tabSelectorFragment_to_generalTabFragment"
            app:destination="@id/generalTabFragment" />
        <action
            android:id="@+id/action_tabSelectorFragment_to_weatherTabFragment"
            app:destination="@id/weatherTabFragment" />
        <action
            android:id="@+id/action_tabSelectorFragment_to_glanceTabFragment"
            app:destination="@id/glanceTabFragment" />
        <action
            android:id="@+id/action_tabSelectorFragment_to_calendarTabFragment"
            app:destination="@id/calendarTabFragment" />
        <action
            android:id="@+id/action_tabSelectorFragment_to_clockTabFragment"
            app:destination="@id/clockTabFragment" />
        <action
            android:id="@+id/action_tabSelectorFragment_to_typographyTabFragment"
            app:destination="@id/typographyTabFragment" />
    </fragment>
    <fragment
        android:id="@+id/typographyTabFragment"
        android:name="com.tommasoberlose.anotherwidget.ui.fragments.tabs.TypographyFragment"
        android:label="TypographyTabFragment" />
</navigation>