<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:id="@+id/container"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:id="@+id/icon"
        android:src="@drawable/round_today_24"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AnotherWidget.Settings.Title"
            android:id="@+id/title"
            android:text="@string/title_permission_calendar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label"
            android:text="@string/description_permission_calendar"
            style="@style/AnotherWidget.Settings.Subtitle"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:clickable="true"
            android:layout_marginStart="-8dp"
            android:layout_marginBottom="-8dp"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:focusable="true"
            android:id="@+id/action_grant_permission"
            android:textColor="@color/errorColorText"
            android:text="@string/action_grant_permission"/>
    </LinearLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:id="@+id/toggle"
        android:buttonTint="@color/colorAccent" />
</LinearLayout>