<?xml version="1.0" encoding="utf-8"?>
<LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/fragment_history_menu_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_refresh"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/primary_text_light"
            android:src="@drawable/ic_action_refresh"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_refresh_widget"
            style="@style/AnotherWidget.Settings.Title"
            android:background="@android:color/transparent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/primary_text_light" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:textSize="14sp"
        android:id="@+id/action_rate"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/primary_text_light"
            android:src="@drawable/ic_action_rate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_rate"
            style="@style/AnotherWidget.Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/primary_text_light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_feedback"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/primary_text_light"
            android:src="@drawable/ic_action_sms"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_feedback"
            style="@style/AnotherWidget.Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/primary_text_light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_share"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@android:color/primary_text_light"
            android:src="@drawable/ic_action_share"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            style="@style/AnotherWidget.Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/primary_text_light"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:id="@+id/action_support"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:tint="@color/midnight_blue"
            android:src="@drawable/ic_action_gift"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_support"
            style="@style/AnotherWidget.Settings.Title"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorNightDark"/>
    </LinearLayout>
</LinearLayout>