<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/AnotherWidget.Settings.Title"
                android:gravity="start"
                android:id="@+id/info_provider"
                android:textAlignment="viewStart"
                android:text="@string/settings_weather_provider_open_weather"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/round_launch_24"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/colorPrimaryText"
                android:id="@+id/action_open_provider"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/disabledButtonBackground" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnotherWidget.Settings.Title"
                android:gravity="start"
                android:textSize="16sp"
                android:id="@+id/info_title"
                android:textAlignment="viewStart"
                android:text="@string/weather_provider_info_open_weather_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AnotherWidget.Main.Subtitle"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                android:gravity="start"
                android:id="@+id/info_subtitle"
                android:textAlignment="viewStart"
                android:text="@string/weather_provider_info_open_weather_subtitle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:layout_marginTop="24dp"
                android:id="@+id/api_key_container"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/api_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textStyle="bold"
                    android:nextFocusUp="@id/api_key"
                    android:nextFocusLeft="@id/api_key"
                    android:gravity="center_vertical|start"
                    android:textColor="@color/colorPrimaryText"
                    app:boxBackgroundColor="@color/colorPrimaryDark"
                    app:boxStrokeWidth="0dp"
                    app:hintTextColor="@color/colorAccent"
                    android:hint="@string/settings_weather_provider_api_key_title"
                    android:fontFamily="@font/google_sans"
                    android:textAlignment="viewStart"
                    android:textDirection="locale"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:textDirection="locale"
                        android:id="@+id/api_key_inner"
                        android:fontFamily="@font/google_sans"
                        android:gravity="center_vertical|start" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/colorAccent"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:letterSpacing="0"
                app:backgroundTint="@color/colorAccent_op10"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:rippleColor="@color/colorAccent_op30"
                android:layout_marginTop="8dp"
                android:id="@+id/action_save_key"
                android:text="@string/action_save"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>